--- a/ggy_twitter_clone/pubspec.yaml
+++ b/ggy_twitter_clone/pubspec.yaml
@@ -19,10 +19,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   get_it: ^7.2.0
+  google_fonts: ^3.0.1
   image_cropper: ^2.0.3
   image_picker: ^0.8.5+3
   simple_moment: ^1.1.1
-  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -38,4 +38,5 @@ flutter:
 
   assets:
     # Add assets from the images directory to the application.
-    - assets/images/twitter.png
+    - assets/images/
+
