--- a/ggy_twitter_clone/pubspec.yaml
+++ b/ggy_twitter_clone/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_storage: ^10.2.17
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.3
   flutter_localizations:
     sdk: flutter
   get_it: ^7.2.0
@@ -40,3 +41,7 @@ flutter:
     # Add assets from the images directory to the application.
     - assets/images/
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
